<resources>
    <string name="app_name">curriculApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">curriculApp</string>
    <string name="nav_header_subtitle">2021 edub_IT</string>
    <string name="nav_header_desc">Navigation header</string>


    #mis-cursos             
    <string name="menu_home">curriculApp</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    #configuracion            
    <string name="configuraci_n">Configuración</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="inicio_de_inscripciones_a_examenes">Inicio de inscripciones a examenes</string>
    <string name="inicio_de_inscripciones_a_cursos">Inicio de inscripciones a cursos</string>
    <string name="tema">Tema</string>
    <string name="claro">Claro</string>
    <string name="oscuro">Oscuro</string>
    <string name="acerca_de">Acerca de</string>
    <string name="ltima_actualizaci_n_3_de_mayo_2021">Última actualización: 3 de Mayo 2021</string>
    <string name="contactanos">Contactanos</string>
    <string name="curriculapp_gmail_com">curriculapp@gmail.com</string>

    <string name="claro_oscuro">Claro/Oscuro</string>
    <string name="tema_1">Tema 1</string>
    <string name="tema_2">Tema 2</string>

    #Informacion
    <string name="informaci_n">Información</string>
    <string name="institucional">Institucional</string>
    <string name="string_institucional">institucional</string>
    <string name="bedel_a">Bedelía:</string>
    <string name="string_bedel_a">Bedelia</string>
    <string name="bedelia">Bedelía:</string>
    <string name="whatsapp_bedelia">WhatsApp: 092 294 056</string>
    <string name="string_whatsapp_bedelia">WhatsApp: 092 294 056</string>
    <string name="telefono_bedelia">"Tel: 2408 7569 "</string>
    <string name="tel_bedelia">Tel: 2408 7569</string>
    <string name="telefonos_bedelia">Tel: 2408 7569 ó 2400 11 06 int. 132</string>
    <string name="mail_bedelia">Mail: bedelia@fadu.edu.uy</string>
    <string name="biblioteca">Biblioteca:</string>
    <string name="string_biblioteca">Biblioteca:</string>
    <string name="whatsapp_biblioteca">WhatsApp: 092 502 324</string>
    <string name="mail_biblioteca">Mail: prestamo@fadu.edu.uy</string>
    <string name="string_mail_biblioteca">Mail: prestamo@fadu.edu.uy</string>
    <string name="centros_de_estudiantes">Centros de Estudiantes:</string>
    <string name="string_centros_de_estudiantes">Centros de Estudiantes:</string>
    <string name="string_cgu_instagram">CGU: instagram: /cgu_fadu "</string>
    <string name="ceda_instagram">CEDA: instagram /cedaasceepfeuu</string>
    <string name="SAE">Sistema de Atención al Estudiante (SAE):</string>
    <string name="mail_sae">atencionalestudiante@fadu.edu.uy</string>
    <string name="aviso_fadu">Atención al público: Sin atención presencial al público hasta nuevo aviso, con modalidad de teletrabajo, comunicarse por correo electrónico o WhatsApp. Para trámites que lo requieran, se atenderá en forma presencial únicamente a través de la agenda web (agendaweb.udelar.edu.uy)</string>

    #mis-cursos
    <string name="miscur">Mis Cursos</string>
    <string name="mi_progreso">Mi progreso</string>
    <string name="mi_planificador">Mi planificador</string>
    <string name="mapa_curricular">Mapa curricular</string>
    <string name="quiero_cursar">Quiero cursar</string>
    <string name="aprobe">Aprobé</string>
    <string name="quiero_inscribirme">Quiero inscribirme</string>
    <string name="ir_a_mapa_curricular">Ir a mapa curricular</string>
    <string name="action_settings">Configuración</string>


        ##optativas de inicio
    <string name="op_inicio_subtit">De inicio</string>
    <string name="op_inicio_dic">Diccionario operativo de recursos arquitectónicos</string>
    <string name="op_inicio_pal">El proyecto de arquitectura y luz</string>
    <string name="op_inicio_hibdig">Hibridación digital - Ideación y diseño | 1er y 2do sem</string>
    <string name="op_inicio_lab">Laboratorio proyecto y materia</string>
    <string name="op_inicio_mecymap">Mecanismos y mapeos</string>
    <string name="op_inicio_metod">Metodologías proyectuales</string>
    <string name="op_inicio_mpc">Métodos y procesos creativos</string>
    <string name="op_inicio_pm">Pocitos Modernos</string>
    <string name="op_inicio_popsup">Pops-up, pequeños dispositivos de uso cotidiano</string>
    <string name="op_inicio_posp_dig">Posproducción digital en el dibujo de la arquitectura | 1er y 2do sem</string>
    <string name="op_inicio_acv">Re-Presentaciones. Arte y cultura visual (SXIX-XX-XXI)</string>
    <string name="op_inicio_tap">Taller de arquitectura potencial</string>

        ##optativas libres
    <string name="op_libres_subtit">Libres</string>
    <string name="op_libres_ai3">Acondicionamiento e Instalaciones 3</string>
    <string name="op_libres_amb_esc">Ambientes escolares</string>
    <string name="op_libres_ae_gruphab">Análisis y evaluación de grupos habitacionales</string>
    <string name="op_libres_arq_uru">Arquitectos Uruguayos</string>
    <string name="op_libres_arq_dig">Arquitecturas digitales</string>
    <string name="op_libres_agua_ciudad">Bordes agua-ciudad como espacio de intercambio</string>
    <string name="op_libres_cyd_made">Construcción y diseño de madera</string>
    <string name="op_libres_coop">Cooperativas de vivienda</string>
    <string name="op_libres_croquis">Croquis: el dibujo a pulso | 1er y 2do sem</string>
    <string name="op_libres_eco_urb">Economía urbana avanzada</string>
    <string name="op_libres_ficc_pol">Ficciones políticas. Géneros, aspectos y territorios</string>
    <string name="op_libres_foro">Foro</string>
    <string name="op_libres_gest_prod">Gestión y producción de obra</string>
    <string name="op_libres_lab_mest">Laboratorio de morfologías estructurales</string>
    <string name="op_libres_matrix">Matrix</string>
    <string name="op_libres_patol">Patologías frecuentes en la construcción</string>
    <string name="op_libres_pre_proy">Precisión proyectual</string>
    <string name="op_libres_prof_ae">Profundización en el análisis estructural</string>
    <string name="op_libres_proy_amb">Proyectar ambiente</string>
    <string name="op_libres_proy_av">Proyecto avanzado de estructuras</string>
    <string name="op_libres_re_act">Re Activa</string>
    <string name="op_libres_sal_lab_emer">Salida, laboratorio de emergencia</string>
    <string name="op_libres_zipp">Zipped</string>
  
    #perfil
    <string name="perfil">Perfil</string>
    <string name="nombre"></string>
    <string name="preferencias">Preferencias</string>
    <string name="guardar">GUARDAR</string>
    <string name="autocad">Autocad</string>
    <string name="tresdsmax">3ds max</string>
    <string name="illustrator">Illustrator</string>
    <string name="photoshop">Photoshop</string>
    <string name="revit">Revit</string>
    <string name="corel">Corel</string>

    # Menu
    <string name="menu_miscursos">Mis cursos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_optativas">Optativas</string>
    <string name="menu_electivas">Electivas</string>
    <string name="menu_informacion">Informacion</string>
    <string name="menu_configuracion">Configuracion</string>

    # Mapa Curricular
    <string name="map_curric">Mapa curricular</string>
    <string name="in_arq">Iniciación a la arquitectura</string>
    <string name="tec_integ">Tecnología integrada</string>
    <string name="acond_nat">Acondicionamiento natural</string>
    <string name="pyr1">Proyecto y representación 1</string>
    <string name="pyr2">Proyecto y representación 2</string>
    <string name="transv_1">Transversal 1: sustentabilidad</string>
    <string name="guardado">Guardar</string>
    <string name="save">¡GUARDADO!</string>

    # Electivas
    <string name="electivas">Electivas</string>
    <string name="ecolog_gral">Ecología general (FCien)</string>
    <string name="cien_tec_y_soc">Ciencia, Tecnología y Sociedad (FIng)</string>
    <string name="metodos_cuant">Métodos Cuantitativos (FAgro)</string>
    <string name="epistem">Epistemología (FQ)</string>
    <string name="prop_intelec">Propiedad Intelectual (FQ)</string>
    <string name="ingl_cient">Inglés Científico (FQ)</string>

</resources>