<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_miscursos"
            android:title="@string/menu_miscursos" />
        <item
            android:id="@+id/nav_optativas"
            android:title="@string/menu_optativas" />
        <item
            android:id="@+id/nav_electivas"
            android:title="@string/menu_electivas" />
        <item
            android:id="@+id/nav_informacion"
            android:title="@string/menu_informacion" />
        <item
            android:id="@+id/nav_configuracion"
            android:title="@string/menu_configuracion" />
    </group>
</menu>